--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,8 @@ body {
   height: 300px;
   border-radius: 5px;
   border: 5px solid gray;
-
+  background: gray;
+  border-radius: 50%;
 }
 
 footer {
